# sagemaker-example

./: .gitignore  BIBLICAL_QA_GUIDE.md  CLAUDE.md  CLI_CHEATSHEET.md  DEMO_PIPELINE.md  DOCKER_SETUP.md  Dockerfile  README.md  TRAINING_INFERENCE_SEPARATION.md  agent.py  biblical_qa_cli.py  biblical_qa_example.py  controller.py  dask_embedding_job.py  pyproject.toml  rag_cli.py  requirements.txt  run_demo.py  sagemaker_config.py  spark_embedding_job.py  trust-policy.json
.github/: GITHUB_ACTIONS_QUICK_START.md
.github/workflows/: SETUP.md  docker-build-push.yml
1_sagemaker-mlops/: .interview-prep-ds.md  METRICS_LOGGING.md  README.md  agent.py  iam_policy.json  inference_controller.py  pull_training_metrics.py  sagemaker_config.py  train_locally.py
1_sagemaker-mlops/batch/: Dockerfile.lambda  QUICKSTART.md  README.md  build_lambda_docker.sh  deploy.py  deploy_aws_cli.py  example_usage.py  (+4 more)
2_rag-system/: README.md  load_spark_embeddings.py  rag_cli.py
3_spark-learning/: QUICK_START.md  README.md  SPARK_LEARNING_MAP.md  YOUR_LEARNING_STRUCTURE.md  analyze_results.py  convert_parquet_to_csv.py  spark_embedding_simple.py
biblical_qa/: __init__.py  analyzer.py  concordance_data.py  cross_references.py  explainer.py  morphological_lexicon.py  word_lookup.py
docker/: Dockerfile  entrypoint.sh
docs/: SPARK_GUIDE.md
models/: __init__.py  lightgbmclassifier.py  xgbregressor.py
rag/: kjv_corpus_builder.py  simple_rag.py
tests/: __init__.py  test_biblical_qa_integration.py  test_biblical_word_analyzer.py  test_local_training.py  test_sagemaker_training.py
(+18 files in other folders)
