[project]
name = "sagemaker-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for iterating on multiple model types using AWS SageMaker"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Philip Sattler", email = "mksedv97@gmail.com"}
]

dependencies = [
    "boto3==1.34.0",
    "sagemaker==2.224.4",
    "scikit-learn==1.5.0",
    "xgboost==2.0.3",
    "lightgbm==4.6.0",
    "numpy==1.26.4",
    "pandas>=2.2.0",
    "python-dotenv==1.0.0",
    "pydantic==2.9.1",
    "setuptools==82.0.1",
    "requests==2.32.3",
    "sentence-transformers==2.7.0",
    "torch>=2.3.0",
    "rank-bm25==0.2.2",
    "dask[dataframe]==2024.1.0",
    "pyarrow==14.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
